--- a/src/input.css
+++ b/src/input.css
@@ -14,6 +14,10 @@
   --font-weight-extra-bold: 800;
 }
 
+* {
+  transition: all 0.5s ease-in-out;
+}
+
 body {
   font-family: "Poppins", sans-serif;
   width: 100vw;
@@ -27,6 +31,8 @@ input {
   padding: 10px;
   border-radius: 8px;
   font-weight: 800;
+  cursor: pointer;
+  outline: none;
 }
 
 label {
@@ -38,4 +44,16 @@ label {
 
 span {
   color: var(--color-purple);
+}
+
+input:focus {
+  border: 1px solid var(--color-purple);
+}
+
+.textErr {
+  color: var(--color-red);
+}
+
+.inputErr {
+  border: 1px solid var(--color-red);
 }
