--- a/src/output.css
+++ b/src/output.css
@@ -12,16 +12,16 @@
     --color-gray-200: hsl(0, 0%, 86%);
     --color-gray-300: oklch(87.2% 0.01 258.338);
     --color-gray-700: oklch(37.3% 0.034 259.733);
+    --color-black: hsl(0, 0%, 0%);
     --color-white: hsl(0, 100%, 100%);
     --spacing: 0.25rem;
     --text-5xl: 3rem;
     --text-5xl--line-height: 1;
-    --text-6xl: 3.75rem;
-    --text-6xl--line-height: 1;
     --radius-3xl: 1.5rem;
     --default-font-family: var(--font-sans);
     --default-mono-font-family: var(--font-mono);
     --color-purple: hsl(259, 100%, 65%);
+    --color-red: hsl(0, 100%, 67%);
   }
 }
 @layer base {
@@ -185,9 +185,6 @@
   .top-\[80\%\] {
     top: 80%;
   }
-  .left-1 {
-    left: calc(var(--spacing) * 1);
-  }
   .left-1\/2 {
     left: calc(1/2 * 100%);
   }
@@ -221,9 +218,6 @@
   .table {
     display: table;
   }
-  .w-1 {
-    width: calc(var(--spacing) * 1);
-  }
   .w-1\/2 {
     width: calc(1/2 * 100%);
   }
@@ -233,19 +227,12 @@
   .max-w-\[90\%\] {
     max-width: 90%;
   }
-  .border-collapse {
-    border-collapse: collapse;
-  }
-  .-translate-x-1 {
-    --tw-translate-x: calc(var(--spacing) * -1);
-    translate: var(--tw-translate-x) var(--tw-translate-y);
-  }
   .-translate-x-1\/2 {
     --tw-translate-x: calc(calc(1/2 * 100%) * -1);
     translate: var(--tw-translate-x) var(--tw-translate-y);
   }
-  .resize {
-    resize: both;
+  .cursor-pointer {
+    cursor: pointer;
   }
   .gap-5 {
     gap: calc(var(--spacing) * 5);
@@ -262,10 +249,6 @@
   }
   .rounded-bl-3xl {
     border-bottom-left-radius: var(--radius-3xl);
-  }
-  .border {
-    border-style: var(--tw-border-style);
-    border-width: 1px;
   }
   .border-0 {
     border-style: var(--tw-border-style);
@@ -294,10 +277,6 @@
     font-size: var(--text-5xl);
     line-height: var(--tw-leading, var(--text-5xl--line-height));
   }
-  .text-6xl {
-    font-size: var(--text-6xl);
-    line-height: var(--tw-leading, var(--text-6xl--line-height));
-  }
   .font-\[900\] {
     --tw-font-weight: 900;
     font-weight: 900;
@@ -305,12 +284,16 @@
   .italic {
     font-style: italic;
   }
-  .underline {
-    text-decoration-line: underline;
-  }
   .outline {
     outline-style: var(--tw-outline-style);
     outline-width: 1px;
+  }
+  .hover\:bg-black {
+    &:hover {
+      @media (hover: hover) {
+        background-color: var(--color-black);
+      }
+    }
   }
   .\[\&\>div\]\:flex-1 {
     &>div {
@@ -319,6 +302,9 @@
   }
 }
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap");
+* {
+  transition: all 0.5s ease-in-out;
+}
 body {
   font-family: "Poppins", sans-serif;
   width: 100vw;
@@ -331,6 +317,8 @@ input {
   padding: 10px;
   border-radius: 8px;
   font-weight: 800;
+  cursor: pointer;
+  outline: none;
 }
 label {
   font-size: 12px;
@@ -340,6 +328,15 @@ label {
 }
 span {
   color: var(--color-purple);
+}
+input:focus {
+  border: 1px solid var(--color-purple);
+}
+.textErr {
+  color: var(--color-red);
+}
+.inputErr {
+  border: 1px solid var(--color-red);
 }
 @property --tw-translate-x {
   syntax: "*";
