--- a/src/output.css
+++ b/src/output.css
@@ -7,6 +7,7 @@
       "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
       "Courier New", monospace;
+    --color-blue-500: oklch(62.3% 0.214 259.815);
     --color-purple-500: oklch(62.7% 0.265 303.9);
     --color-gray-100: hsl(0, 0%, 94%);
     --color-gray-200: hsl(0, 0%, 86%);
@@ -19,6 +20,10 @@
     --text-xs--line-height: calc(1 / 0.75);
     --text-5xl: 3rem;
     --text-5xl--line-height: 1;
+    --text-7xl: 4.5rem;
+    --text-7xl--line-height: 1;
+    --text-8xl: 6rem;
+    --text-8xl--line-height: 1;
     --radius-3xl: 1.5rem;
     --default-transition-duration: 150ms;
     --default-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -195,8 +200,35 @@
   .left-1\/2 {
     left: calc(1/2 * 100%);
   }
+  .left-11 {
+    left: calc(var(--spacing) * 11);
+  }
+  .left-11\/12 {
+    left: calc(11/12 * 100%);
+  }
   .mx-5 {
     margin-inline: calc(var(--spacing) * 5);
+  }
+  .mx-\[1vw\] {
+    margin-inline: 1vw;
+  }
+  .mx-\[2vw\] {
+    margin-inline: 2vw;
+  }
+  .mx-\[3vw\] {
+    margin-inline: 3vw;
+  }
+  .mx-\[4vw\] {
+    margin-inline: 4vw;
+  }
+  .mx-\[5vw\] {
+    margin-inline: 5vw;
+  }
+  .mx-\[7vw\] {
+    margin-inline: 7vw;
+  }
+  .mx-\[10vw\] {
+    margin-inline: 10vw;
   }
   .mx-auto {
     margin-inline: auto;
@@ -237,11 +269,38 @@
   .w-1\/2 {
     width: calc(1/2 * 100%);
   }
+  .w-10 {
+    width: calc(var(--spacing) * 10);
+  }
+  .w-12 {
+    width: calc(var(--spacing) * 12);
+  }
+  .w-14 {
+    width: calc(var(--spacing) * 14);
+  }
+  .w-15 {
+    width: calc(var(--spacing) * 15);
+  }
+  .w-20 {
+    width: calc(var(--spacing) * 20);
+  }
+  .w-32 {
+    width: calc(var(--spacing) * 32);
+  }
   .w-full {
     width: 100%;
   }
+  .max-w-\[30\%\] {
+    max-width: 30%;
+  }
   .max-w-\[90\%\] {
     max-width: 90%;
+  }
+  .min-w-\[30\%\] {
+    min-width: 30%;
+  }
+  .min-w-full {
+    min-width: 100%;
   }
   .border-collapse {
     border-collapse: collapse;
@@ -260,8 +319,20 @@
   .resize {
     resize: both;
   }
+  .flex-col {
+    flex-direction: column;
+  }
+  .items-center {
+    align-items: center;
+  }
+  .justify-center {
+    justify-content: center;
+  }
   .gap-5 {
     gap: calc(var(--spacing) * 5);
+  }
+  .overflow-x-hidden {
+    overflow-x: hidden;
   }
   .rounded-full {
     border-radius: calc(infinity * 1px);
@@ -335,6 +406,263 @@
       @media (hover: hover) {
         background-color: var(--color-black);
       }
+    }
+  }
+  .sm\:left-7\/8 {
+    @media (width >= 40rem) {
+      left: calc(7/8 * 100%);
+    }
+  }
+  .sm\:left-7\/12 {
+    @media (width >= 40rem) {
+      left: calc(7/12 * 100%);
+    }
+  }
+  .sm\:left-10\/11 {
+    @media (width >= 40rem) {
+      left: calc(10/11 * 100%);
+    }
+  }
+  .sm\:left-11\/12 {
+    @media (width >= 40rem) {
+      left: calc(11/12 * 100%);
+    }
+  }
+  .sm\:left-\[80\%\] {
+    @media (width >= 40rem) {
+      left: 80%;
+    }
+  }
+  .sm\:left-\[90\%\] {
+    @media (width >= 40rem) {
+      left: 90%;
+    }
+  }
+  .sm\:left-\[92\%\] {
+    @media (width >= 40rem) {
+      left: 92%;
+    }
+  }
+  .sm\:left-\[93\%\] {
+    @media (width >= 40rem) {
+      left: 93%;
+    }
+  }
+  .sm\:left-\[94\%\] {
+    @media (width >= 40rem) {
+      left: 94%;
+    }
+  }
+  .sm\:left-\[95\%\] {
+    @media (width >= 40rem) {
+      left: 95%;
+    }
+  }
+  .sm\:left-\[98\%\] {
+    @media (width >= 40rem) {
+      left: 98%;
+    }
+  }
+  .sm\:left-\[100\%\] {
+    @media (width >= 40rem) {
+      left: 100%;
+    }
+  }
+  .sm\:left-full {
+    @media (width >= 40rem) {
+      left: 100%;
+    }
+  }
+  .sm\:mx-20 {
+    @media (width >= 40rem) {
+      margin-inline: calc(var(--spacing) * 20);
+    }
+  }
+  .sm\:mx-24 {
+    @media (width >= 40rem) {
+      margin-inline: calc(var(--spacing) * 24);
+    }
+  }
+  .sm\:mx-30 {
+    @media (width >= 40rem) {
+      margin-inline: calc(var(--spacing) * 30);
+    }
+  }
+  .sm\:mx-40 {
+    @media (width >= 40rem) {
+      margin-inline: calc(var(--spacing) * 40);
+    }
+  }
+  .sm\:mx-\[20vw\] {
+    @media (width >= 40rem) {
+      margin-inline: 20vw;
+    }
+  }
+  .sm\:w-\[40\%\] {
+    @media (width >= 40rem) {
+      width: 40%;
+    }
+  }
+  .sm\:w-\[50\%\] {
+    @media (width >= 40rem) {
+      width: 50%;
+    }
+  }
+  .sm\:w-\[60\%\] {
+    @media (width >= 40rem) {
+      width: 60%;
+    }
+  }
+  .sm\:w-\[70\%\] {
+    @media (width >= 40rem) {
+      width: 70%;
+    }
+  }
+  .sm\:text-blue-500 {
+    @media (width >= 40rem) {
+      color: var(--color-blue-500);
+    }
+  }
+  .md\:left-full {
+    @media (width >= 48rem) {
+      left: 100%;
+    }
+  }
+  .md\:mx-\[2vw\] {
+    @media (width >= 48rem) {
+      margin-inline: 2vw;
+    }
+  }
+  .md\:mx-\[5vw\] {
+    @media (width >= 48rem) {
+      margin-inline: 5vw;
+    }
+  }
+  .md\:mx-\[10vw\] {
+    @media (width >= 48rem) {
+      margin-inline: 10vw;
+    }
+  }
+  .md\:mx-\[20rem\] {
+    @media (width >= 48rem) {
+      margin-inline: 20rem;
+    }
+  }
+  .md\:mx-\[25vw\] {
+    @media (width >= 48rem) {
+      margin-inline: 25vw;
+    }
+  }
+  .md\:mx-\[33rem\] {
+    @media (width >= 48rem) {
+      margin-inline: 33rem;
+    }
+  }
+  .md\:w-\[40\%\] {
+    @media (width >= 48rem) {
+      width: 40%;
+    }
+  }
+  .md\:w-\[50\%\] {
+    @media (width >= 48rem) {
+      width: 50%;
+    }
+  }
+  .md\:w-\[70\%\] {
+    @media (width >= 48rem) {
+      width: 70%;
+    }
+  }
+  .lg\:mx-80 {
+    @media (width >= 64rem) {
+      margin-inline: calc(var(--spacing) * 80);
+    }
+  }
+  .lg\:mx-\[20rem\] {
+    @media (width >= 64rem) {
+      margin-inline: 20rem;
+    }
+  }
+  .lg\:mx-\[30rem\] {
+    @media (width >= 64rem) {
+      margin-inline: 30rem;
+    }
+  }
+  .lg\:mx-\[30vw\] {
+    @media (width >= 64rem) {
+      margin-inline: 30vw;
+    }
+  }
+  .lg\:mx-\[33rem\] {
+    @media (width >= 64rem) {
+      margin-inline: 33rem;
+    }
+  }
+  .lg\:mx-\[33vw\] {
+    @media (width >= 64rem) {
+      margin-inline: 33vw;
+    }
+  }
+  .lg\:mx-\[35rem\] {
+    @media (width >= 64rem) {
+      margin-inline: 35rem;
+    }
+  }
+  .lg\:mx-\[35vw\] {
+    @media (width >= 64rem) {
+      margin-inline: 35vw;
+    }
+  }
+  .lg\:mx-\[40rem\] {
+    @media (width >= 64rem) {
+      margin-inline: 40rem;
+    }
+  }
+  .lg\:mx-\[50rem\] {
+    @media (width >= 64rem) {
+      margin-inline: 50rem;
+    }
+  }
+  .lg\:mx-\[50vw\] {
+    @media (width >= 64rem) {
+      margin-inline: 50vw;
+    }
+  }
+  .lg\:mx-\[70\%\] {
+    @media (width >= 64rem) {
+      margin-inline: 70%;
+    }
+  }
+  .lg\:mx-\[100vw\] {
+    @media (width >= 64rem) {
+      margin-inline: 100vw;
+    }
+  }
+  .lg\:w-80 {
+    @media (width >= 64rem) {
+      width: calc(var(--spacing) * 80);
+    }
+  }
+  .lg\:w-\[40\%\] {
+    @media (width >= 64rem) {
+      width: 40%;
+    }
+  }
+  .lg\:w-\[50\%\] {
+    @media (width >= 64rem) {
+      width: 50%;
+    }
+  }
+  .lg\:text-7xl {
+    @media (width >= 64rem) {
+      font-size: var(--text-7xl);
+      line-height: var(--tw-leading, var(--text-7xl--line-height));
+    }
+  }
+  .lg\:text-8xl {
+    @media (width >= 64rem) {
+      font-size: var(--text-8xl);
+      line-height: var(--tw-leading, var(--text-8xl--line-height));
     }
   }
   .\[\&\>div\]\:flex-1 {
